[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/sprites/interface/game_interface.png" type="Texture" id=1]
[ext_resource path="res://assets/sound/Player's Score.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/fonts/game_mode.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/GameOverMenu.gd" type="Script" id=4]
[ext_resource path="res://scenes/UI/SceneChanger.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/UI_font.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/sprites/bullets/AllStarShot.png" type="Texture" id=7]
[ext_resource path="res://assets/sound/se_cancel00.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/se_select00.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sound/se_ok00.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 78
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 46
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 62
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 200.0, 372.638, 522.478 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 399.899, 255.646 ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="Sprite" parent="CanvasLayer"]
position = Vector2( 641.571, 375.136 )
scale = Vector2( 1.25877, 1.48047 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.839216 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource( 2 )
volume_db = -13.0
autoplay = true

[node name="GameOver" type="Label" parent="CanvasLayer"]
anchor_left = 0.237128
anchor_top = 0.0739304
anchor_right = 0.760878
anchor_bottom = 0.216788
rect_clip_content = true
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
valign = 1
uppercase = true
percent_visible = -0.125
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.307164
anchor_top = 0.235297
anchor_right = 0.442164
anchor_bottom = 0.30244
margin_right = -3.0
custom_fonts/font = SubResource( 2 )
text = "Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Score" type="Label" parent="CanvasLayer"]
anchor_left = 0.454807
anchor_top = 0.239034
anchor_right = 0.679807
anchor_bottom = 0.300462
custom_fonts/font = SubResource( 3 )
text = "000 000 000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.184818
anchor_top = 0.428571
anchor_right = 0.816067
anchor_bottom = 0.75
margin_top = 50.0
margin_bottom = 50.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TryAgain" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
margin_right = 504.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../Return")
focus_neighbour_bottom = NodePath("../Return")

[node name="Sprite" type="Sprite" parent="CanvasLayer/VBoxContainer/TryAgain"]
visible = false
modulate = Color( 1, 1, 1, 0.356863 )
position = Vector2( 473.663, 53.5569 )
rotation = 1.5708
scale = Vector2( 4.86492, 18.7786 )
texture = ExtResource( 7 )
offset = Vector2( -5.99766, 11.7505 )
region_enabled = true
region_rect = Rect2( 295.274, 128.266, 16.7744, 30.3933 )

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/TryAgain"]
anchor_left = 0.0129506
anchor_top = -0.16529
anchor_right = 0.988149
anchor_bottom = 1.09471
custom_fonts/font = SubResource( 4 )
text = "Try again"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Return" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
margin_top = 150.0
margin_right = 504.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../TryAgain")
focus_neighbour_bottom = NodePath("../TryAgain")

[node name="Sprite" type="Sprite" parent="CanvasLayer/VBoxContainer/Return"]
visible = false
modulate = Color( 1, 1, 1, 0.356863 )
position = Vector2( 585.57, 52.8024 )
rotation = 1.5708
scale = Vector2( 4.86492, 28.358 )
texture = ExtResource( 7 )
offset = Vector2( -5.99766, 11.7505 )
region_enabled = true
region_rect = Rect2( 295.274, 128.266, 16.7744, 30.3933 )

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/Return"]
anchor_left = -0.0470458
anchor_top = -0.165291
anchor_right = 1.04819
anchor_bottom = 1.09471
custom_fonts/font = SubResource( 4 )
text = "Return to title"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SceneChanger" parent="." instance=ExtResource( 5 )]
layer = -1

[node name="CancelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -13.0

[node name="OkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -13.0

[node name="ChangeOption" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -13.0
[connection signal="focus_entered" from="CanvasLayer/VBoxContainer/TryAgain" to="." method="_on_TryAgain_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/VBoxContainer/TryAgain" to="." method="_on_TryAgain_focus_exited"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/TryAgain" to="." method="_on_TryAgain_pressed"]
[connection signal="focus_entered" from="CanvasLayer/VBoxContainer/Return" to="." method="_on_Return_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/VBoxContainer/Return" to="." method="_on_Return_focus_exited"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Return" to="." method="_on_Return_pressed"]
